--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header class="without-description">
-        <h1>Dekkermg.GitHub.io</h1>
+        <h1>Yet Another Website by Martin Dekker</h1>
         <p></p>
         <p class="view"><a href="https://github.com/dekkermg">View the Project on GitHub <small>dekkermg</small></a></p>
         <ul>
